--- a/front/create_test.css
+++ b/front/create_test.css
@@ -147,7 +147,7 @@ footer {
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   padding: 15px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   border-top: 3px solid #fbc531;
@@ -159,7 +159,9 @@ footer {
     .menu-toggle {
         display: block;
     }
-
+    footer{
+        position: relative;
+    }
     .nav-links {
         position: absolute;
         right: 0;
